test/functions/return-type-class-hierarchy/shared-child1-child2.2.good
shared-child1-child2.chpl:4: error: unable to resolve return type
